# BowlingSimPy

./: .gitignore  Bowling.py  Utils.py  __init__.py  main.py  requirements.txt  setup.cfg  setup.py
src/Bowling_Sim/: Bowling.py  Converter.py  Utils.py  __init__.py
src/Bowling_Sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
