[metadata]
name = Bowling-Sim
version = 1.0.0
author = Theodor
author_email = Theodor.wase@icloud.com
description = A realistic bowling physics simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Majwt/BowlingSimHemma/tree/master
project_urls =
    Docs = https://docs.example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src